# python-project-lvl4

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci_actions.yml
task_manager/: admin.py  custom_objects.py  custom_test_objects.py  forms.py  models.py  settings.py  tests.py  text_constants.py  urls.py  views.py
task_manager/fixtures/: labels.json  users.json
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  text_constants.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_taskstatus_date_created.py  0003_alter_taskstatus_name.py  0004_alter_taskstatus_date_created_alter_taskstatus_name.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  text_constants.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_date_modified_and_more.py  0002_initial.py  0003_alter_task_executor.py  0003_tasklabelrelation_task_labels_tasklabelrelation_task.py  0004_alter_task_labels.py  0005_alter_task_labels.py  0006_alter_task_labels.py
task_manager/templates/: base.html  delete.html  form.html  index.html  layout.html  list.html  login.html  messages.html  navbar.html  register.html  update.html  users.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
(+9 files in other folders)
