[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Natalia Teplynina <nt@mnt9.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
